Split From.image into imageName, tag, and digest fields
This change splits the FROM instruction's image field into three
separate fields for better structured access:
- imageName: The base image name/repository
- tag: Optional image tag (e.g., "20.04")
- digest: Optional image digest (e.g., "sha256:...")

Similar to the User instruction split into user and group fields,
this provides cleaner access to image components while maintaining
support for:
- Environment variables in any component
- Quoted strings (preserved as single content items)
- Complex expressions like FROM $REGISTRY/image:${VERSION}-suffix

Parser changes:
- Split image parsing at ':' for tags or '@' for digests
- Preserve single quoted strings without splitting
- Handle environment variables across all components

Recipe changes:
- ChangeBaseImage updated to reconstruct full image from components
- Preserves quote style and handles both single-content and
  split-content image formats

Test changes:
- Updated complexExpression test to verify separate fields
- All existing tests pass

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>