@@ -584,14 +584,14 @@ class DockerfileParserTest implements RewriteTest {
                 // Check imageName contents
                 List<Dockerfile.ArgumentContent> imageNameContents = from.getImageName().getContents();
                 assertThat(imageNameContents).hasSize(2);
-                assertThat(imageNameContents.get(0)).extracting(arg -> ((Dockerfile.EnvironmentVariable)arg).getName()).isEqualTo("REGISTRY");
+                assertThat(imageNameContents.getFirst()).extracting(arg -> ((Dockerfile.EnvironmentVariable)arg).getName()).isEqualTo("REGISTRY");
                 assertThat(imageNameContents.get(1)).extracting(arg -> ((Dockerfile.PlainText)arg).getText()).isEqualTo("/image");
 
                 // Check tag contents
                 assertThat(from.getTag()).isNotNull();
                 List<Dockerfile.ArgumentContent> tagContents = from.getTag().getContents();
                 assertThat(tagContents).hasSize(2);
-                assertThat(tagContents.get(0)).extracting(arg -> ((Dockerfile.EnvironmentVariable)arg).getName()).isEqualTo("VERSION");
+                assertThat(tagContents.getFirst()).extracting(arg -> ((Dockerfile.EnvironmentVariable)arg).getName()).isEqualTo("VERSION");
                 assertThat(tagContents.get(1)).extracting(arg -> ((Dockerfile.PlainText)arg).getText()).isEqualTo("-suffix");
 
                 // Check no digest
